change background color, add about page

--- a/about.html
+++ b/about.html
@@ -2,11 +2,10 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title>Kate's Personal Website</title>
+        <title>About</title>
     </head>
     <body>
         <script src="script.js"></script>
-        <h1>Hello World!</h1>
-        <p><a href="./about.html">About Me! </a></p>
+        <h1>About me?</h1>
     </body>
 </html>
