Add CSS rules, new font

--- a/about.html
+++ b/about.html
@@ -2,10 +2,14 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
         <title>About</title>
     </head>
     <body>
         <script src="script.js"></script>
-        <h1>About me?</h1>
+        <h1><a href = ./index.html>kate bennert</a></h1>
+        <div id="outerRect"></div>
     </body>
 </html>
