--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title>Kate's Personal Website</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+        <title>kate bennert</title>
     </head>
     <body>
         <script src="script.js"></script>
-        <h1>Hello World!</h1>
+        <h1>kate bennert</h1>
         <p><a href="./about.html">About Me! </a></p>
     </body>
 </html>
