--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
         <title>kate bennert</title>
     </head>
     <body>
         <script src="script.js"></script>
         <h1>kate bennert</h1>
+        <div id="subhead">i'm (working on becoming) a software developer. here are some things about me.</div>
         <p><a href="./about.html">About Me! </a></p>
     </body>
 </html>
