--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>kate bennert</h1>
         <div id="subhead">i'm (working on becoming) a software developer. here's some stuff about me.</div>
         <p><a href="./about.html">About Me! </a></p>
-        <p><img id="skates" src="./images/roller-skates.png" alt="roller skates" /></p>
+        <p><img id="skates" src="./images/roller-skates.png" alt="roller skates" /></a></p>
         <p><img id="cannoli" src="./images/cannoli-rawr-sticker.png" /></p>
     </body>
 </html>
