--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Permanent+Marker&display=swap" rel="stylesheet">
         <title>kate bennert</title>
     </head>
     <body>
         <script src="script.js"></script>
         <h1>kate bennert</h1>
-        <div id="subhead">i'm (working on becoming) a software developer. here's some stuff about me.</div>
+        <div id="subhead">i'm (learning how to be) a software developer. here's some stuff about me.</div>
         <p><a href="./about.html">About Me! </a></p>
-        <p><img id="skates" src="./images/roller-skates.png" alt="roller skates" /></a></p>
+        <p><img id="kate" src="./images/kate.png" /></p>
         <p><img id="cannoli" src="./images/cannoli-rawr-sticker.png" /></p>
     </body>
 </html>
