Update style and readme

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <script src="script.js"></script>
         <h1>kate bennert</h1>
         <div id="subhead">i'm (learning how to be) a software developer. here's some stuff about me.</div>
-        <p><a href="./about.html">About Me! </a></p>
-        <p><img id="kate" src="./images/kate.png" /></p>
-        <p><img id="cannoli" src="./images/cannoli-rawr-sticker.png" /></p>
+        <div class="flex-container">
+            <div><img id="kate" src="./images/kate.png" /></div>
+            <div><img id="cannoli" src="./images/cannoli-rawr-sticker.png" /></div>
+            <div><img id="hops" src="./images/hops.png" /></div>
+            <div><img id="magnolia" src="./images/magnolia-crop.png" /></div>
+        </div>
     </body>
 </html>
